fix(homework_1): fixed report.html and line_format_config.py

--- a/homework_1_Log_Analyzer/log_analyzer/reports/report.html
+++ b/homework_1_Log_Analyzer/log_analyzer/reports/report.html
@@ -51,12 +51,13 @@
 
 <body>
   <table border="1" class="report-table">
-  <thead>
-    <tr class="report-table-header-row">
-    </tr>
-  </thead>
-  <tbody class="report-table-body">
-  </tbody>
+    <thead>
+      <tr class="report-table-header-row">
+      </tr>
+    </thead>
+    <tbody class="report-table-body">
+    </tbody>
+  </table>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="jquery.tablesorter.min.js"></script> 
